<resources>
    <string name="app_name">BlogApp</string>
    <string name="menu_add">Add Post</string>
    <string name="menu_settings">Settings</string>
    <string name="logo1text">Welcome to</string>
    <string name="register_button_hint">Register Here.</string>
    <string name="login_button_hint">Login</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="register1text">Create a new Account</string>
    <string name="passwordsEquals">Password and Confirm password isnt equals</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="registerText">Register</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="registerCreateAccountText">Register now!</string>
    <string name="toLoginPageText">Do you already have an account? Login Here.</string>
    <string name="setup_account_name">Your name</string>
    <string name="setup_confirm_button">Confirm setup</string>
    <string name="postDescription">Post description</string>
    <string name="addPostButton">Add new thinks to blog!</string>
    <string name="postPage">New Post Page</string>
    <string name="home_bottom_icon">Home</string>
    <string name="notification_bottom_icon">Notifications</string>
    <string name="account_bottom_icon">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_user_name">Username</string>
    <string name="default_timestamp">Blog post date</string>
    <string name="default_description_post">Example post text bla bla bla, some words bla bla bla</string>
</resources>
